# map_trailGT

./: CMakeCache.txt  CMakeLists.txt  README.md  all_three.txt  aug28.txt  aug29_vertmap.txt  aug5.txt  aug5_badmap.txt  backup_badmap.txt  backup_vert.txt  backup_vertmap.txt  badmap.txt  bak.dyn_trainvert.txt  bak.dyn_trainvert_1.txt  bak.dyn_trainvert_2.txt  bak.dyn_trainvert_3.txt  bak2.dyn_trainvert_2.txt  distorted_traindistorts.txt  distorted_trainvert.txt  dyn_testvert.txt  dyn_testvert_1.txt  dyn_testvert_2.txt  dyn_testvert_3.txt  dyn_trainvert_1.txt  dyn_trainvert_2.txt  dyn_trainvert_3.txt  june11.txt  june11_badmap.txt  just_two.txt  nov_01_2016_traintest.txt  trailGT.cpp  trail_imagedirs.txt  traj.txt  traj_fail.txt  treevertmultimap.txt  vertmap.txt  vertmap_old.txt
scallop_data/: hunter_data.csv  scale_data.csv
